--- a/app/views/layouts/_message.html.erb
+++ b/app/views/layouts/_message.html.erb
@@ -1,11 +1,12 @@
-<div class="alert alert-<%= bootstrap_class_for(type) %> alert-dismissible fade show" role="alert">
-
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
+<div class="alert alert-<%= bootstrap_class_for(type) %> alert-dismissible fade show d-flex align-items-center justify-content-between p-2 px-3" role="alert">
+  <div class="d-flex align-items-center">
+    <strong class="me-2"><%= type.capitalize %>:</strong>
+    <span><%= message %></span>
+  </div>
+  <button type="button"
+          class="btn-close p-0 m-3"
+          style="width: 1rem; height: 1rem;"
+          data-bs-dismiss="alert"
+          aria-label="Close">
   </button>
-
-  <h4 class="alert-heading"><%= type.capitalize %></h4>
-  <ul class="mb-0">
-    <li><%= message %></li>
-  </ul>
 </div>
